--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tienda de Tecnología</title>
 
+<link rel="shortcut icon" href="assets/logo.ico" type="image/x-icon" />
+  
   <link rel="stylesheet" href="css/styles.css" />
   <script defer src="js/codigo.js"></script>
 </head>
