--- a/Control de Versiones/Version 1/index.html
+++ b/Control de Versiones/Version 1/index.html
@@ -5,8 +5,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Tienda de Tecnología</title>
+
 <style>
-/* Fuentes y colores base */
+
+/* ====== LO ORIGINAL (NO MODIFICADO) ====== */
 body {
 font-family: Arial, sans-serif;
 margin: 0;
@@ -14,6 +16,7 @@ padding: 0;
 background-color: #f5f7fa;
 color: #333;
 }
+
 header {
 text-align: center;
 font-size: 28px;
@@ -21,6 +24,21 @@ padding: 20px 10px 10px;
 color: #0a74da;
 font-weight: bold;
 }
+
+/* ====== AÑADIDO: línea horizontal decorativa ====== */
+hr {
+border: none;
+border-top: 4px dotted #0a74da;
+width: 60%;
+margin: 20px auto;
+}
+
+/* ====== AÑADIDO: borde inferior al header ====== */
+header {
+border-bottom: 4px solid #0a74da;
+box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+}
+
 /* Contenedor logo */
 .logo-container {
 display: flex;
@@ -28,14 +46,23 @@ justify-content: center;
 align-items: center;
 margin-bottom: 20px;
 }
+
 .logo-container img {
 height: 120px;
 transition: transform 0.3s ease;
 }
-/* Pequeño efecto al pasar sobre el logo */
+
+/* ====== AÑADIDO: borde y sombra al logo ====== */
+.logo-container img {
+border: 3px solid #0a74da;
+border-radius: 20px;
+box-shadow: 0px 0px 15px rgba(10,116,218,0.4);
+}
+
 .logo-container img:hover {
 transform: scale(1.05);
 }
+
 /* Nav estilizado */
 nav {
 text-align: center;
@@ -46,6 +73,17 @@ padding: 12px 0;
 border-radius: 6px;
 box-shadow: 0 2px 5px rgba(10, 116, 218, 0.4);
 }
+
+/* ====== AÑADIDO: líneas verticales ====== */
+nav a {
+border-right: 2px solid white;
+padding: 0 15px;
+}
+
+nav a:last-child {
+border-right: none;
+}
+
 nav a {
 color: white;
 margin: 0 12px;
@@ -54,14 +92,17 @@ font-weight: 600;
 transition: color 0.3s ease;
 cursor: pointer;
 }
+
 nav a:hover {
 color: #ffd54f;
 }
+
 main {
 padding: 0 20px;
 max-width: 700px;
 margin: 0 auto;
 }
+
 article {
 font-size: 16px;
 line-height: 1.6;
@@ -72,13 +113,22 @@ border-radius: 8px;
 box-shadow: 0 0 8px rgb(10 116 218 / 0.15);
 transition: box-shadow 0.3s ease;
 }
+
+/* ====== AÑADIDO: borde más visible y sombra fuerte ====== */
+article {
+border: 2px solid #e3d193;
+border-radius: 20px;
+}
+
 article:hover {
 box-shadow: 0 0 16px rgb(10 116 218 / 0.35);
 cursor: default;
 }
+
 strong {
 color: #0a74da;
 }
+
 ol {
 background: white;
 padding: 15px 30px;
@@ -87,11 +137,21 @@ box-shadow: 0 0 8px rgb(10 116 218 / 0.15);
 max-width: 700px;
 margin: 10px auto 25px;
 }
+
+/* ====== AÑADIDO: borde y sombra múltiple ====== */
+ol {
+border: 2px solid #0a74da;
+border-radius: 20px;
+box-shadow: 0px 0px 10px rgba(10,116,218,0.3) inset,
+            0px 0px 15px rgba(10,116,218,0.3);
+}
+
 ol li {
 margin-bottom: 12px;
 font-size: 16px;
 line-height: 1.5;
 }
+
 footer {
 text-align: center;
 margin-top: 30px;
@@ -99,22 +159,36 @@ font-size: 14px;
 color: #777;
 padding-bottom: 30px;
 }
+
+/* ====== AÑADIDO: línea superior en footer ====== */
+footer {
+border-top: 4px solid #0a74da;
+}
+
 </style>
+
 <script type="text/javascript" src="js/codigo.js"></script>
 </head>
+
 <body>
+
 <header>
 Tienda de Tecnología
 </header>
-<!-- Logo centrado en su propio contenedor -->
+
+<!-- AÑADIDO: línea horizontal -->
+<hr>
+
 <div class="logo-container">
 <img src="logo.png" alt="Logo" />
 </div>
+
 <nav>
 <a href="#inicio">Inicio</a> |
 <a href="#catalogo">Catálogo</a> |
 <a href="#contacto">Contacto</a>
 </nav>
+
 <main>
 <h2 id="inicio">¿Quiénes somos?</h2>
 <article>
@@ -123,41 +197,38 @@ Somos una tienda especializada en tecnología, ofreciendo dispositivos de
 última generación,
 calidad garantizada y los mejores precios del mercado.
 </article>
+
 <h2 id="catalogo">Catálogo de Productos</h2>
 <ol>
-<li><a href="https://www.samsung.com/co/smartphones/galaxy-s/galaxy-s23-
-cream-256gb-sm-s911bzekltc/" target="_blank" rel="noopener
-noreferrer">Samsung Galaxy S23</a> Pantalla AMOLED, 128GB de almacenamiento,
-alto rendimiento y diseño moderno.</li>
-<li><a href="https://mac-center.com/collections/iphone-15-
-pro?srsltid=AfmBOorTkeR-DphFR97N-xO7ltw2956VBNAVIfPviggRRlQQjh6AJE3l"
-target="_blank" rel="noopener noreferrer">Iphone 15 Pro Max</a>Cámara
-avanzada, 256GB de almacenamiento y máxima seguridad iOS.</li>
+<li><a href="https://www.samsung.com/co/smartphones/galaxy-s/galaxy-s23-cream-256gb-sm-s911bzekltc/" target="_blank" rel="noopener noreferrer">Samsung Galaxy S23</a> Pantalla AMOLED, 128GB de almacenamiento, alto rendimiento y diseño moderno.</li>
+
+<li><a href="https://mac-center.com/collections/iphone-15-pro" target="_blank" rel="noopener noreferrer">Iphone 15 Pro Max</a> Cámara avanzada, 256GB de almacenamiento y máxima seguridad iOS.</li>
 </ol>
+
 <article>
 <strong id="contacto">¿Dónde estamos ubicados?</strong><br />
-Nos puedes encontrar en el San Andresito de la 38 en el local 143, visítanos
-y te asesoraremos con
-lo que necesites.
+Nos puedes encontrar en el San Andresito de la 38 en el local 143.
 </article>
+
 <article>
 <strong>Redes Sociales</strong><br />
 <ul>
-<li><a href="https://facebook.com" target="_blank" rel="noopener
-noreferrer">Facebook</a></li>
-<li><a href="https://instagram.com" target="_blank" rel="noopener
-noreferrer">Instagram</a></li>
-<li><a href="https://twitter.com" target="_blank" rel="noopener
-noreferrer">Twitter</a></li>
+<li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+<li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+<li><a href="https://twitter.com" target="_blank">Twitter</a></li>
 </ul>
 </article>
+
 <footer>
 <strong>¡¡ Empleado del Mes !!</strong><br />
 SEBASTIAN ÑUSTES.
 </footer>
+
 </main>
+
 <footer>
 © 2026 Tienda de Tecnología - Todos los derechos reservados
 </footer>
+
 </body>
 </html>
